src/components/Gallery/Gallery.css
/* .gallery-container{
  width: auto;
  background-color: red;
  display: flex;
  flex-direction: column;
  align-items:center ;
  padding: 2% 0%;
  flex: 1 1 80%;
  height: 90vh;
}
.gallery{
  overflow-x: scroll;
  scroll-snap-type: x proximity;
  display: grid;
  width: 100%;
  height: 80%;
  padding: 2% 2%;
  grid-template-rows: minmax(140px,1fr);
  grid-template-columns: 2em;
  grid-gap: 1.5em;
}
.photo{
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}
.photo :hover{
  transform: scale(105%);
}
.photo.wide>img{
  min-width: 100%;
}
.photo.tall>img{
  min-height: 100%;
}
.photo.square>img{
  min-height: 100%;
  width: auto;
}
.photo.tall{
  grid-row:span 2;
  grid-column: span 1;
}
.photo.wide{
  grid-column: span 2;
  grid-row: span 1;
}
.photo.square{
  grid-row:span 1;
  grid-column:span 1;

}
@media screen and (max-width:768px) {
  .gallery{
    grid-template-columns: repeat(2,1fr);
  }
} */


.page{
  display: grid;
  height: 100%;
  /* background-color: rgb(255, 166, 0); */
  scroll-snap-align: center;
  /* padding: 2em; */
  margin-left: 1em;

  /* Grid property */
  grid-template-columns: repeat(3,auto);
  grid-template-rows: 50% 50% ;
  justify-items: stretch;
  align-items: center;
  row-gap: .5em;
  column-gap: .5em ;
}
.page>img{
  object-fit: cover;
  object-position: center;
  max-height: 100%;
}

.gallery-container{
  display: flex;
  flex-direction: column;
  background-color: #CC281E;
  padding-bottom: 2em;
}
.gallery::-webkit-scrollbar{
  display: none;
}
.gallery{
  display: grid;
    grid-template-rows: minmax(98%, 90vh);
    grid-auto-flow: column;
    grid-auto-columns: 80vw;
    overflow-x: scroll;
    scroll-snap-type: x proximity;
    padding-bottom: calc(.75 * 20px);
    margin-bottom: calc(-.25 * 20px);
}
@media screen and (max-width : 450px){
  .gallery{
    grid-auto-columns: 90vw;
  }
}

